fix: disabling text selection over video on ios

--- a/packages/tv-ui/src/components/slide/MediaSlide/MediaSlide.scss
+++ b/packages/tv-ui/src/components/slide/MediaSlide/MediaSlide.scss
@@ -249,6 +249,9 @@
 
   video,
   .video-js .text-selection-on-gesture-workaround {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
   }
   .video-js {
